# rag-fidelity-context-autopsy

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
data/: eval_cases.jsonl
docs/: ADR-001-hybrid-fusion.md  ADR-002-cross-encoder-reranking.md  ADR-003-context-budget-autopsy.md  ADR-004-tokenizer-alignment.md  ADR-005-diagnostic-tokenization-pressure.md  ADR-006-four-pipeline-comparison-harness.md  ADR-007-real-four-pipeline-execution.md  ADR-008-versioned-baseline-artifacts-and-regression-gate.md  PROJECT_SCOPE.md  external_review_surface_contract.md  hosted_demo_validation_v1.md  public_corpus_transfer_eval.md  public_transfer_comparison_contract.md  public_transfer_review_contract.md
rag_lab/: __init__.py  case_explorer.py  chunkers.py  chunking_explorer.py  comparison.py  comparison_artifacts.py  comparison_runner.py  comparison_runtime.py  context_assembly.py  context_autopsy_explorer.py  corpus_loader.py  diagnostic_scenarios.py  embedders.py  eval_cases.py  executive_evaluation_report.py  failure_taxonomy.py  public_transfer.py  public_transfer_artifacts.py  public_transfer_explorer.py  public_transfer_review.py  public_transfer_runtime.py  repair_recommendations.py  rerankers.py  retrieval_explorer.py  retrievers.py  schemas.py  tokenizers.py
scripts/: materialize_squad_v1_transfer_fixture.py  publish_public_transfer_review.py  render_executive_evaluation_report.py  run_chunking_boundary_diagnostic.py  run_comparison_baseline.py  run_context_autopsy_smoke.py  run_context_pressure_diagnostic.py  (+6 more)
(+49 files in other folders)
