[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-fidelity-context-autopsy"
version = "0.2.0"
description = "Local-first RAG reliability lab for diagnosing evidence loss."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "pydantic>=2.7,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
]
tiktoken = [
    "tiktoken>=0.8,<1.0",
]

[tool.setuptools]
packages = ["rag_lab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
